--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,15 @@ p{
 	color: white;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 800px;
+	max-width: 1024px;
 	box-sizing: border-box;
 	padding: 30px 0;
 	font-weight: bold;
 }
-span{
+li{
 	text-align: center;
 }
+
 .forecast:hover .row:not(hover){
 	opacity: 0.7;
 }
